--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,5 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_MAIL=notifynation.service@gmail.com
 SMTP_PASSWORD=utyp zflf ghkq zoll
+SMTP_link="mongodb+srv://sanjaybandaru360:SANJAY@testing.l8sqy.mongodb.net/"
 PORT=5000
