--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,4 @@ SMTP_PASSWORD=utyp zflf ghkq zoll
 MONGO_URI="mongodb+srv://sanjaybandaru360:SANJAY@testing.l8sqy.mongodb.net/"
 PORT=5000   
 # FRONTEND_URL = http://localhost:5173
-FRONTEND_URL = https://notify-nation-flame.vercel.app/
+FRONTEND_URL = https://notify-nation-flame.vercel.app
